fix loading screen on small pages

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -292,6 +292,10 @@ h1:first-letter {
 
 @media screen and (max-width: 991px) {
 
+    .page .section .container .row div {
+        margin-top: 53px;
+    } 
+
     .landing-page h2 {
         margin-top: 26px;
     }
@@ -831,7 +835,6 @@ h1:first-letter {
     }  
     .section {
         min-height: 91vh !important;
-        margin-top: 53px;
     }  
 }
 
